--- a/src/Styles/Variables.css
+++ b/src/Styles/Variables.css
@@ -1,1 +1,15 @@
-/* No CSS *//*# sourceMappingURL=Variables.css.map */
+@font-face {
+  font-family: "myfont";
+  src: url("fonts/Netflix Sans Light.otf");
+}
+
+@font-face {
+  font-family: "myfontmed";
+  src: url("fonts/Netflix Sans Medium.otf");
+}
+
+@font-face {
+  font-family: "myfontbold";
+  src: url("fonts/Netflix Sans Bold.otf");
+}
+/*# sourceMappingURL=Variables.css.map */
