--- a/src/Styles/Content.scss
+++ b/src/Styles/Content.scss
@@ -3,6 +3,7 @@
 
 .content {
   grid-row: 2/3;
+
   z-index: 0;
   position: relative;
   margin-top: -4rem;
@@ -14,23 +15,26 @@
   &__header {
     position: absolute;
     top: 9.6rem;
-    left: 2rem;
-    font-family: $font-secondary;
-    font-size: 5rem;
-    letter-spacing: 0.8rem;
+    left: 2.8rem;
+    font-family: $font-primary;
+    font-size: 4rem;
+    letter-spacing: 0.4rem;
     font-weight: bold;
-    color: rgb(90, 194, 112);
+    color: rgb(250, 169, 19);
   }
   &__para {
     position: absolute;
     top: 16rem;
     left: 2.7rem;
     width: 30%;
-    font-family: $font-primary;
+    font-family: "myfontbold";
     font-size: 1.4rem;
-    font-weight: lighter;
-    color: rgb(196, 187, 151);
-    letter-spacing: 0.1rem;
+    font-weight: bold;
+    color: rgb(199, 9, 9);
+    letter-spacing: 0rem;
+    @include respond(tab-port) {
+      width: 44%;
+    }
   }
 
   &__btn-1 {
@@ -44,6 +48,7 @@
     position: absolute;
     bottom: 12rem;
     left: 3rem;
+    cursor: pointer;
 
     &:hover {
       background-color: rgb(216, 216, 216);
@@ -51,7 +56,7 @@
     .text-1 {
       font-weight: bold;
       margin-right: 0.7rem;
-      font-family: $font-third;
+      font-family: "myfont";
 
       margin-bottom: 0.1rem;
     }
@@ -92,6 +97,7 @@
     justify-content: space-evenly;
     align-items: center;
     border-radius: 0.2rem;
+    cursor: pointer;
 
     &:hover {
       background: rgba(105, 105, 105, 0.7);
@@ -102,6 +108,8 @@
       color: white;
       margin-bottom: 0.1rem;
       font-family: $font-third;
+      width: 5rem;
+      font-family: "myfont";
     }
     .icon-2 {
       height: 3rem;
