--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -63,6 +63,7 @@ html {
 .header__search--icon {
   width: 3rem;
   height: 3rem;
+  cursor: pointer;
   fill: white;
   position: absolute;
   top: 1.25rem;
