--- a/src/Styles/Form.scss
+++ b/src/Styles/Form.scss
@@ -21,7 +21,7 @@
   &--icon {
     width: 3rem;
     height: 3rem;
-
+    cursor: pointer;
     fill: white;
     position: absolute;
     top: 1.25rem;
