--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,7 +1,6 @@
 @import "./Variables.scss";
 @import "./index.scss";
 .header {
-  background-color: rgba(0, 0, 0, 0.726);
   grid-row: 1/2;
 
   position: -webkit-sticky;
@@ -14,6 +13,7 @@
     position: absolute;
     top: 0.5rem;
     left: 2rem;
+    cursor: pointer;
   }
 
   &__nav {
@@ -24,26 +24,29 @@
     left: 12rem;
     display: flex;
     justify-content: space-between;
-    font-size: 1rem;
-    font-family: $font-primary;
-    font-weight: 100;
+    font-size: 0.9rem;
+    font-family: "myfont";
+
+    @include respond(tab-port) {
+      width: 40%;
+    }
     @include respond(phone) {
       width: 8rem;
     }
     &--item {
       text-decoration: none;
-      color: rgb(209, 208, 208);
+      color: rgb(223, 221, 221);
       letter-spacing: 0.1rem;
       transition: all 0.1s ease-in;
       &:hover {
-        color: gray;
+        color: rgb(182, 181, 181);
       }
     }
     &--actitem {
       text-decoration: none;
       color: rgb(255, 255, 255);
       letter-spacing: 0.1rem;
-      transform: scale(1.1);
+      transform: scale(1.02);
       transition: all 0.1s ease-in;
       &:hover {
         color: gray;
@@ -55,6 +58,7 @@
     position: absolute;
     top: 1.5rem;
     right: 0.2rem;
+    cursor: pointer;
     display: flex;
     @include respond(tab-land) {
       // width < 1355?
@@ -133,6 +137,7 @@
     right: 8rem;
     color: white;
     transform: scale(0.8);
+    cursor: pointer;
     @include respond(tab-land) {
       // width < 1355?
       transform: scale(0.8);
@@ -152,13 +157,14 @@
   }
   &__kid {
     font-size: 1rem;
-    font-family: $font-primary;
+    font-family: "myfont";
     font-weight: 100;
     color: white;
     letter-spacing: 0.1rem;
     position: absolute;
     top: 1.5rem;
-    right: 12rem;
+    right: 11.4rem;
+    cursor: pointer;
     @include respond(tab-port) {
       // width < 1355?
       top: 1.6rem;
@@ -185,4 +191,10 @@
     transform: scale(0.5);
     top: 0.5rem;
   }
+}
+.nonopac {
+  background-color: #141414;
+}
+.opac {
+  background-color: rgba(0, 255, 255, 0);
 }
